# hand_gesture_recognition

./: README.md
neuro_calc/: inference.py  main.py  pyproject.toml  train.py
neuro_calc/conf/: config.yaml
neuro_calc/conf/base/: camera.yaml
neuro_calc/conf/model/: st_gcn.yaml
neuro_calc/data/raw/0/: seq_1769102288182.npy  seq_1769102293115.npy  seq_1769102296826.npy  seq_1769102301120.npy  seq_1769102305410.npy  seq_1769102311078.npy  seq_1769102316686.npy  seq_1769102324180.npy  seq_1769102330223.npy  seq_1769102337706.npy  seq_1769102344015.npy  seq_1769102347948.npy  seq_1769102352013.npy  seq_1769102357151.npy  seq_1769102360852.npy  seq_1769102364267.npy  seq_1769102369675.npy  seq_1769102373226.npy  seq_1769102376754.npy  seq_1769102381716.npy  seq_1769102385347.npy
neuro_calc/data/raw/1/: seq_1769102410714.npy  seq_1769102414713.npy  seq_1769102418655.npy  seq_1769102423011.npy  seq_1769102426416.npy  seq_1769102429927.npy  seq_1769102433193.npy  seq_1769102438858.npy  seq_1769102444048.npy  seq_1769102447772.npy  seq_1769102450946.npy  seq_1769102454268.npy  seq_1769102458385.npy  seq_1769102462369.npy  seq_1769102466352.npy  seq_1769102471009.npy  seq_1769102474982.npy  seq_1769102479152.npy  seq_1769102486303.npy  seq_1769102489988.npy  (+1 more)
neuro_calc/src/core/: geometry.py  signal.py  solver.py
neuro_calc/src/graphs/: adjacency.py
neuro_calc/src/models/: solver.py  st_gcn.py
neuro_calc/src/pipeline/: dataset.py  loader.py  preprocessor.py  sensor.py  visualizer.py
neuro_calc/tests/: test_geometry.py
neuro_calc/tools/: recorder.py
(+293 files in other folders)
